# RiDyL

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  CMakePresets.json  RiDyL.code-workspace
include/: RiDyL.hpp
include/RiDyL/: _config.hpp  import.hpp
src/: RiDyL.cpp  import.cpp
src/private/: util.hpp
